@@ -17,7 +17,7 @@
 #    Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA
 #
 #######################################################################################
-#BEGIN {push @INC, '..'}
+BEGIN {push @INC, '/etc/sisiya/sisiya-client-checks'}
 ## or run : perl -I..
 use strict;
 use warnings;
@@ -32,7 +32,6 @@ if (-f $SisIYA_Config::functions) {
 #######################################################################################
 ###############################################################################
 #### the default values
-our $sqlplus_prog = 'sqlplus';
 our $db_name = 'TIGER';
 our $db_user = 'system';
 our $db_password = 'manager';
@@ -56,7 +55,7 @@ $ENV{'NLS_LANG'} = $env_nls_lang;
 
 my $sql_file = $SisIYA_Config::conf_d_dir.'/sisiya_baan_jobs_status_oracle.sql';
 if (-f $sql_file) {
-	my @a = `$sqlplus_prog -S $db_user/$db_password\@$db_name \@$sql_file`;
+	my @a = `$SisIYA_Config::external_progs{'sqlplus'} -S $db_user/$db_password\@$db_name \@$sql_file`;
 	print @a;
 	#foreach (@a) {
 	#	$_ =~ s/\s+/ /g;
